--- a/index.html
+++ b/index.html
@@ -8,10 +8,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
   </head>
-  <body class="bg-danger-subtle " >
-<h1 class="container p-3 text-center">BOOLEAN TRENI</h1>
+  <body class="bg-danger-subtle" >
+    <div class="card container" ; >
+        <ul class="list-group list-group-flush"><h1 class="text-danger-emphasis p-3 text-center">BOOLEAN TRENI</h1>
+          <li class="list-group-item" id="priceticket"></li>
+          <li class="list-group-item" id="discountTicket"></li>
+          <li class="list-group-item" id="priceDiscountOld"></li>
+          <li class="list-group-item" id="priceDiscountYoung"></li>
+          <div class="d-grid gap-2 m-2 d-md-block">
+            <a href="#" class="btn btn-success">Compra il biglietto</a>
+            <a href="#" class="btn btn-secondary" type="reset" value="Reset">Annulla ordine</a>
+
+          </div>
+         
+          
+        </ul>
+      </div>
+<!-- <h1 class="container p-3 text-center">BOOLEAN TRENI</h1>
   <div class="text-danger p-2" id="priceticket"></div>
-<div class="text-light p-2" id="discountTicket"></div>
+<div class="text-light p-2" id="discountTicket"></div> -->
 
 
 
